@@ -3,6 +3,7 @@
 - Allow shift-clicking in measure bar to select more measures
 - Shift-clicking on a note that is already selected unselects it
 - Fixed what happens when you resize the frame while a track is maximized
+- Allow entering precise values in the controller editor
 - Allow finer pitch bends
 
 1.3 beta 2
